fixed Whitespacing

--- a/style.css
+++ b/style.css
@@ -41,10 +41,6 @@ h1
     color: var(#fff);
     justify-self: start;
     margin-left: 20px;
-}
-
-#navbar-logo 
-{
     cursor: pointer;
 }
 
